2010-04-22  James Youngman  <jay@gnu.org>

	Remove some obsolete comments.
	* mylist.h: Remove a spurious extra "Local Variables" comment.
	* sid_list.h: Remove some obsolete (and long commented-out) code.
	* relvbr.h (class relvbr): Likewise.
	* release.h (class release): Likewise.
	
	Finish test_sccsdate.cc.
	* unit-tests/test_sccsdate.cc: Added unit tests for the remaining
	public methods of sccs_date.
	* unit-tests/TODO.txt: sccsdate.h has unit tests now, remove it
	from the TODO list.

	Remove core files for "make distclean".
	* unit-tests/Makefile.am (DISTCLEANFILES): Remove core files.

	* AUTHORS: Mention that googletest/CONTRIBUTORS enumerates the
	contributors to the Google C++ Testing Framework.

	* googletest/Makefile.am (EXTRA_DIST): Distribute README.cssc.
	* unit-tests/Makefile.am (EXTRA_DIST): Distribute TODO.txt.

	Add TODO list for unit tests we need to write.
	* unit-tests/TODO.txt: New file; a working list of what unit tests
	are still needed.
					 
	Add unit tests for sccsdate.h.
	* unit-tests/test_sccsdate.cc: New file.
	* unit-tests/Makefile.am (test_sccsdate_SOURCES): Add
	test_sccsdate.cc.  
	(check_PROGRAMS): Add test_sccsdate.

	Explain what the googletest directory is and how to run unit tests.
	* README (Testing): Expand to include a description of the unit
	tests and how to run them.
	* docs/borrowed-files.txt: Mention googletest/*.  Also remove tghe
	out-of-date information about the last update to the files which
	autoconf updates.
	* googletest/README.cssc: Add README file explaining the
	relationship between the code in this directory and the rest of
	CSSC.

2010-04-21  James Youngman  <jay@gnu.org>

	Add unit test cases for ASSERT failures.
	* unit-tests/test_mylist.cc (MylistDeathTest): Various unit test
	cases for ASSERT failures.
	* unit-tests/test_sid.cc (SidTest.Successor): Verify that the null
	SID's successor is 1.1.

	Unit test sid_list::merge and sid_list::remove
	* unit-tests/test_sid_list.cc: Enable unit tests for